--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prettier": "^3.2.5"
     },
     "dependencies": {
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "readline-sync": "^1.4.10"
     }
 }
